Updated constructor visibility in RollupLogger to respect its nature as a singleton

--- a/rollup/core/classes/RollupLogger.cls
+++ b/rollup/core/classes/RollupLogger.cls
@@ -1,5 +1,5 @@
 public class RollupLogger extends Rollup {
-  public RollupLogger() {
+  private RollupLogger() {
     super(InvocationPoint.FROM_STATIC_LOGGER);
   }
 
